--- a/WebProjects/PR_WeatherApp-(nodeJS-html-css)/package.json
+++ b/WebProjects/PR_WeatherApp-(nodeJS-html-css)/package.json
@@ -4,7 +4,8 @@
   "description": "Creating a weather backend app.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node index.js"
   },
   "author": "HK",
   "license": "ISC",
